# project-strap

./: CHANGELOG.md  project-strap.cabal
app/: Main.hs
