cabal-version:      2.4
name:               project-strap
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/ConnorDillon/project-strap

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Connor Dillon
maintainer:         connor@cdillon.nl

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

executable project-strap
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
