cabal-version:        2.4
name:                 project-strap
version:              0.1.0.0
homepage:             https://github.com/ConnorDillon/project-strap
license:              GPL-3.0-only
license-file:         LICENSE
author:               Connor Dillon
maintainer:           connor@cdillon.nl
category:             Language

executable strap
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
      base ^>= 4.16.4.0,
      text ^>= 2.0.2,
      -- vector ^>= 0.13.0.0,
      -- mtl ^>= 2.3.1
      -- containers ^>= 0.6.7,
      -- bytestring ^>= 0.11.4.0
    default-extensions:
      OverloadedStrings,
      OverloadedLists